--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,25 @@
-# docker-compose.yml
-version: '3'
+version: '3.8'
 
 services:
   lotto-app:
     build: .
     ports:
       - "5000:5000"
-    volumes:
-      - .:/app
-      - ./lotto.db:/app/lotto.db
+    environment:
+      - FLASK_ENV=production
     restart: unless-stopped
+    container_name: lotto-recommendation-app
+    
+  # 선택사항: Nginx 프록시 (프로덕션 환경용)
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - lotto-app
+    restart: unless-stopped
+    container_name: lotto-nginx
+    profiles:
+      - production
