--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Flask==2.3.3
-Flask-Login
+Flask-Login==0.6.3
 Werkzeug==2.3.7
 requests==2.31.0
+openai==1.3.0
+anthropic==0.7.7
+google-generativeai==0.3.0
+cryptography==41.0.7
