--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ Flask==2.3.3
 Flask-Login==0.6.3
 Werkzeug==2.3.7
 requests==2.31.0
-openai==1.3.0
-anthropic==0.7.7
-google-generativeai==0.3.0
+openai==1.55.3
+anthropic==0.34.2
+google-generativeai==0.8.3
 cryptography==41.0.7
+httpx==0.27.2
